# ttyTest

./: Makefile.am  Makefile.in  README.md  SerialPort.cpp  SerialPort.h  config.h.in  configure  configure.in  main.cpp
